<resources>
    <string name="app_name">test_first</string>

    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="current_page">1</string>
    <string name="refresh">Обновить</string>

    <string name="error_network">Что-то не так с вашим интернет соединением</string>
    <string name="error_server">Сервер недоступен</string>
    <string name="error_smt_go_wrong">Что-то пошло не так</string>
    <string name="error_network_subtitle">Проверьте подключение к интернету</string>
    <string name="error_server_subtitle">Извините, попробуйте позже</string>
    <string name="error_smt_go_wrong_subtitle">Попробуйте позже</string>
    <string name="error">Ошибка</string>

    <string name="product_price">Price - %1$s</string>
    <string name="product_brand">Brand - %1$s</string>
    <string name="product_category">Category - %1$s</string>
    <string name="product_rating">Rating - %1$s</string>

</resources>