<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="8dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:maxLines="3"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="@string/error" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_black"
            android:gravity="center"
            tools:text="subtitle of the error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/light_black"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/ColoredButton"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                style="@style/ColoredButton"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/ok"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>